		I/O when using configuration files with a single machine.
20210316	debugmsg subsystems can now be registered at runtime; this is
		so far done from the Lance Ethernet device.
		Adding a 'verbosity' debugger command for inspecting and
		setting the verbosity level for individual subsystems.
20210318	Fixing an annoying 'backspace' bug in the debugger command
		line handling, where the response sometimes could become
		"unknown command ''".
		Implementing CTRL-W (erase word) in the debugger.
		Implementing CTRL-T (SIGINFO-like status line) in the debugger.
20210320	Removing the UNSTABLE_DEVEL configure define; it was not used
		much, and the debugmsg verbosity levels can be used in its
		place.
		Fixing a bug for MIPS R2000/R3000 when writing to coprocessor 0
		"entrylo" register (if the lowest 8 bits were 0, the code took
		the non-R2000/R3000 code path).
20210321	Adding an empty i960 CPU skeleton [again].
		Moving 'arch' from struct machine to struct cpu; in the future,
		perhaps this would allow a machine to have heterogenous CPU
		sets (such as the Dreamcast with both SuperH and ARM).
		Removing "slow_serial_interrupts_hack_for_linux" (-U) command
		line option, since it is not used for most guest OSes, and
		occupied a command line option char.
20210323	Breaking out the mb89352 SCSI Protocol Controller from the
		luna88k device, and beginning to implement it. Works well
		enough for OpenBSD's "boot" to read the disk and load the
		kernel, but not well enough for the kernel to like it.
20210324	Adding support for 00 99 01 07 variant of luna88k a.out.
20210325	The mb89352 SCSI controller uses its own subsystem for debug
		messages.
20210327	Adding an empty RISC-V CPU skeleton [again].
		Implementing enough of the mb89352 to allow OpenBSD/luna88k
		to boot with SCSI (both the boot loader and the kernel)!
20210401	Applying a patch from George Matsumura to make things build
		better on Linux: __attribute__((__packed__));  in bootblock.h.