@@ -128,9 +128,6 @@ and start the emulator like this:
 	<b>gxemul -e luna-88k -d liveimage-luna88k-raw-20201206.img boot</b>
 </pre>
 
-<p>If asked for a root device, enter <tt>sd0</tt> and leave swap device empty
-(defaulting to <tt>sd0b</tt>).
-
 <p>To run with a graphical framebuffer, add <tt>-X</tt> to the command line.
 
 <p>To shut down the machine gracefully, run <tt>reboot</tt> as root.
